--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>React FTW!</title>
-</head>
-<body>
-  <div id="app"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Walkers Woodturning</title>
+    <link rel="stylesheet" type="text/css" charset="UTF-8"  href="main.css">
+  </head>
+  <body>
+    <div id="app"></div>
 
-  <script src="/bundle.js"></script>
-</body>
+    <script src="/bundle.js"></script>
+  </body>
 </html>
